<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/circleimageview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/back_ground_stroke" />

    <RelativeLayout
        android:id="@+id/noMatchFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/imageviewlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfilImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/findingpeopletextlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageviewlayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp" >

            <TextView
                android:id="@+id/messagetextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/findingpeopleneartou"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/swipeviewlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone" >

            <!-- android:layout_above="@+id/likedislikelayout" -->

        </RelativeLayout>

        <!-- like and dislike layout -->

        <RelativeLayout
            android:id="@+id/likedislikelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="bottom"
            android:visibility="gone"
         
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp">

            <!-- android:layout_alignParentBottom="true" -->

            <RelativeLayout
                android:id="@+id/dislikelayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/infobuttonlaout" >

                <Button
                    android:id="@+id/dislikeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_for_dislike_button" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/likelayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/infobuttonlaout" >

                <Button
                    android:id="@+id/likeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_for_like_button" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/infobuttonlaout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" >

                <Button
                    android:id="@+id/matchedUserInfoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_for_info_button" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        
        app:srcCompat="@drawable/ic_sync_black_24dp" />

</FrameLayout>