<resources>
    <string name="profile_default">N/A</string>

    <string name="app_name">dindin</string>
    <string name="app_id">352800581722920</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mTextDetails"></string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="okbuttontext">Ok</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="findingpeopleneartou">Finding People Near You</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
